--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -34,11 +34,11 @@ monitor=,preferred,auto,1,mirror,DP-1
 # Set programs that you use
 $terminal = kitty
 $fileManager = nautilus
-$menu = tofi-drun -c ~/.config/tofi/configA --drun-launch=true
-$browser = thorium-browser --enable-features=UseOzonePlatform --ozone-platform=wayland
+$menu = rofi -show drun
+$browser = firefox --enable-features=UseOzonePlatform --ozone-platform=wayland
 $notes = obsidian
 $editor = code
-$editor-alt = subl
+$editor-alt = code
 $colorPicker = hyprpicker
 
 # --enable-features=UseOzonePlatform --ozone-platform=wayland use this flag to launch CEF/Electron apps in wayland
@@ -53,18 +53,22 @@ $colorPicker = hyprpicker
 exec-once=/usr/lib/polkit-kde-authentication-agent-1 #Polkit to manage passwords
 exec-once=/usr/bin/dunst
 exec-once=waybar # topbar
-exec-once = swww-daemon # wallpaper
+exec-once = swww-daemon & # wallpaper
 exec-once = swww img ~/Pictures/archchan2.png
 exec-once = wl-paste --type text --watch cliphist store # clipboard
 exec-once = wl-paste --type image --watch cliphist store
 #exec-once = rm "$HOME/.cache/cliphist/db"   #it'll delete history at every restart    
 exec-once = hypridle
-exec-once = /usr/bin/pyp
-
+exec-once = pypr &
+exec-once = dunst &
+exec-once = systemctl --user restart pipewire
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 # exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
+exec-once = nm-applet &
+exec-once = hyprpaper &
+exec-once = ~/.config/hypr/scripts/resetxdgportal.sh
+exec-once = wl-paste --type text --watch cliphist store
+exec-once = wl-paste --type image --watch cliphist store
 
 #############################
 ### ENVIRONMENT VARIABLES ###
