--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -80,7 +80,8 @@ env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
 # Firefox
-# env = MOZ_ENABLE_WAYLAND,1
+env = MOZ_ENABLE_WAYLAND,1
+env = MOZ_DISABLE_RDD_SANDBOX,1
 
 # Nvidia
 env = LIBVA_DRIVER_NAME,nvidia
@@ -101,12 +102,13 @@ env = QT_STYLE_OVERRIDE,kvantum
 env = GDK_BACKEND,wayland,x11,*
 env = SDL_VIDEODRIVER,wayland
 env = CLUTTER_BACKEND,wayland
+env = _JAVA_AWT_WM_NONREPARENTING,1
 
 # XDG Specifications
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
-
+env = OZONE_PLATFORM,wayland
 
 #####################
 ### LOOK AND FEEL ###
