--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -40,6 +40,7 @@ $notes = obsidian
 $editor = code
 $editor-alt = code
 $colorPicker = hyprpicker
+$scriptsDir = $HOME/.config/hypr/scripts
 
 # --enable-features=UseOzonePlatform --ozone-platform=wayland use this flag to launch CEF/Electron apps in wayland
 
@@ -283,7 +284,9 @@ bindl = , xf86AudioPrev, exec, $scriptsDir/MediaCtrl.sh --prv
 bindl = , xf86audiostop, exec, $scriptsDir/MediaCtrl.sh --stop
 
 # screenshot with swappy (another screenshot tool)
-bind = $mainMod, X, exec, $scriptsDir/ScreenShot.sh --swappy #screenshot (swappy)
+bind = $mainMod, X, exec, grimblast --notify copy area
+bind = $mainMod CTRL, X, exec, grimblast --notify save area
+bind = $mainMod ALT, X, exec, grimblast --notify save active
 
 # Resize windows
 binde = $mainMod CTRL, J, resizeactive,-50 0
