--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -67,6 +67,7 @@ exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRE
 # exec-once = $terminal
 exec-once = nm-applet &
 exec-once = hyprpaper &
+exec-once = ags &
 exec-once = ~/.config/hypr/scripts/resetxdgportal.sh
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
