--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -62,6 +62,7 @@ exec-once = wl-paste --type image --watch cliphist store
 exec-once = hypridle
 exec-once = pypr &
 exec-once = dunst &
+exec-once = if command -v arti > /dev/null; then arti proxy & fi
 exec-once = systemctl --user restart pipewire
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 # exec-once = $terminal
