--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -61,7 +61,7 @@ exec-once = wl-paste --type image --watch cliphist store
 #exec-once = rm "$HOME/.cache/cliphist/db"   #it'll delete history at every restart    
 exec-once = hypridle
 exec-once = pypr &
-exec-once = dunst &
+exec-once = swaync &
 exec-once = if command -v arti > /dev/null; then arti proxy & fi
 exec-once = systemctl --user restart pipewire
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
