--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -31,16 +31,10 @@ monitor=,preferred,auto,1,mirror,DP-1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
-# Set programs that you use
-$terminal = kitty
-$fileManager = nautilus
-$menu = rofi -show drun
 $browser = firefox --enable-features=UseOzonePlatform --ozone-platform=wayland
 $notes = obsidian
-$editor = code
-$editor-alt = code
+$editor = code --enable-features=UseOzonePlatform --ozone-platform=wayland
 $colorPicker = hyprpicker
-$scriptsDir = $HOME/.config/hypr/scripts
 
 # --enable-features=UseOzonePlatform --ozone-platform=wayland use this flag to launch CEF/Electron apps in wayland
 
@@ -65,7 +59,7 @@ exec-once = swaync &
 exec-once = if command -v arti > /dev/null; then arti proxy & fi
 exec-once = systemctl --user restart pipewire
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-# exec-once = $terminal
+exec-once = ghostty
 exec-once = nm-applet &
 exec-once = hyprpaper &
 exec-once = ags &
@@ -234,27 +228,23 @@ device {
 
 # /* ---- ✴️ Variables ✴️ ---- */  #
 $mainMod = SUPER
-# Default
-$scriptsDir = $HOME/.config/hypr/scripts
-$UserConfigs = $HOME/.config/hypr/UserConfigs
-$UserScripts = $HOME/.config/hypr/UserScripts
 
 bind = $mainMod, W, fullscreen, 1
 bind = $mainMod, F, fullscreen, 0
 bind = $mainMod, MINUS, exec, waypaper --folder /home/lazybev/Pictures/
 bind = $mainMod, Return, exec, ghostty
 bind = $mainMod, Q, killactive # Kill
-bind = $mainMod SHIFT, Q, exec, $scriptsDir/KillActiveProcess.sh # Kill active process
-bind = $mainMod SHIFT, X, exec, $scriptsDir/LockScreen.sh # screen lock
-bind = $mainMod SHIFT, P, exec, $scriptsDir/Wlogout.sh # power menu
+bind = $mainMod SHIFT, Q, exec, kill $(hyprctl activewindow | grep -o 'pid: [0-9]*' | cut -d' ' -f2)
+bind = $mainMod SHIFT, X, exec, pidof hyprlock || hyprlock -q # screen lock
+bind = $mainMod SHIFT, P, exec, $HOME/.config/hypr/scripts/Wlogout.sh
 bind = $mainMod, Z, exec, pypr zoom   
 
 # Applications
 bind = $mainMod, T, exec, thunar
 bind = $mainMod SHIFT, T, exec, ghostty -e ranger
 bind = $mainMod, D, exec, rofi -show drun
-bind = $mainMod, B, exec, librewolf
-bind = $mainMod SHIFT, B, exec, firefox
+bind = $mainMod SHIFT, B, exec, librewolf
+bind = $mainMod, B, exec, firefox --enable-features=UseOzonePlatform --ozone-platform=wayland
 bind = $mainMod, S, exec, steam --enable-features=UseOzonePlatform --ozone-platform=wayland
 
 # Dwindle Layout
@@ -270,20 +260,20 @@ bind = ALT, tab, cyclenext
 bind = ALT, tab, bringactivetotop  
 
 # Special Keys / Hot Keys
-bindel = , xf86audioraisevolume, exec, $scriptsDir/Volume.sh --inc # volume up
-bindel = , xf86audiolowervolume, exec, $scriptsDir/Volume.sh --dec # volume down
-bindl = , xf86AudioMicMute, exec, $scriptsDir/Volume.sh --toggle-mic # mic mute
-bindl = , xf86audiomute, exec, $scriptsDir/Volume.sh --toggle # mute
+bindel = , xf86audioraisevolume, exec, $HOME/.config/hypr/scripts/Volume.sh --inc # volume up
+bindel = , xf86audiolowervolume, exec, $HOME/.config/hypr/scripts/Volume.sh --dec # volume down
+bindl = , xf86AudioMicMute, exec, $HOME/.config/hypr/scripts/Volume.sh --toggle-mic # mic mute
+bindl = , xf86audiomute, exec, $HOME/.config/hypr/scripts/Volume.sh --toggle # mute
 bindl = , xf86Sleep, exec, systemctl suspend  # sleep button 
-bindl = , xf86Rfkill, exec, $scriptsDir/AirplaneMode.sh # Airplane mode
+bindl = , xf86Rfkill, exec, $HOME/.config/hypr/scripts/AirplaneMode.sh # Airplane mode
 
 # media controls using keyboards
-bindl = , xf86AudioPlayPause, exec, $scriptsDir/MediaCtrl.sh --pause
-bindl = , xf86AudioPause, exec, $scriptsDir/MediaCtrl.sh --pause
-bindl = , xf86AudioPlay, exec, $scriptsDir/MediaCtrl.sh --pause
-bindl = , xf86AudioNext, exec, $scriptsDir/MediaCtrl.sh --nxt 
-bindl = , xf86AudioPrev, exec, $scriptsDir/MediaCtrl.sh --prv
-bindl = , xf86audiostop, exec, $scriptsDir/MediaCtrl.sh --stop
+bindl = , xf86AudioPlayPause, exec, $HOME/.config/hypr/scripts/MediaCtrl.sh --play
+bindl = , xf86AudioPause, exec, $HOME/.config/hypr/scripts/MediaCtrl.sh --pause
+bindl = , xf86AudioPlay, exec, $HOME/.config/hypr/scripts/MediaCtrl.sh --pause
+bindl = , xf86AudioNext, exec, $HOME/.config/hypr/scripts/MediaCtrl.sh --nxt 
+bindl = , xf86AudioPrev, exec, $HOME/.config/hypr/scripts/MediaCtrl.sh --prv
+bindl = , xf86audiostop, exec, $HOME/.config/hypr/scripts/MediaCtrl.sh --stop
 
 # screenshot with swappy (another screenshot tool)
 bind = $mainMod, X, exec, grimblast --notify copy area
