--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -63,13 +63,14 @@ exec-once = swaync &
 exec-once = if command -v arti > /dev/null; then arti proxy & fi
 exec-once = systemctl --user restart pipewire
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = ghostty
 exec-once = nm-applet &
 exec-once = hyprpaper &
 exec-once = ags &
 exec-once = ~/.config/hypr/scripts/resetxdgportal.sh
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
+exec-once = XDG_RUNTIME_DIR=/run/user/$(id -u)
+exec-once = export $(dbus-launch)
 
 #############################
 ### ENVIRONMENT VARIABLES ###
