--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -58,6 +58,7 @@ exec-once = swww img ~/Pictures/archchan2.png
 exec-once = wl-paste --type text --watch cliphist store # clipboard
 exec-once = wl-paste --type image --watch cliphist store
 exec-once = hypridle
+exec-once = pulseaudio &
 exec-once = pypr &
 exec-once = swaync &
 exec-once = if command -v arti > /dev/null; then arti proxy & fi
