--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -51,8 +51,8 @@ $scriptsDir = $HOME/.config/hypr/scripts
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once=/usr/lib/polkit-kde-authentication-agent-1 #Polkit to manage passwords
-exec-once=waybar # topbar
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec-once = waybar # topbar
 exec-once = swww-daemon & # wallpaper
 exec-once = swww img ~/Pictures/archchan2.png
 exec-once = wl-paste --type text --watch cliphist store # clipboard
@@ -63,7 +63,7 @@ exec-once = pypr &
 exec-once = swaync &
 exec-once = if command -v arti > /dev/null; then arti proxy & fi
 exec-once = systemctl --user restart pipewire
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = nm-applet &
 exec-once = hyprpaper &
 exec-once = ags &
@@ -71,7 +71,7 @@ exec-once = ~/.config/hypr/scripts/resetxdgportal.sh
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 exec-once = XDG_RUNTIME_DIR=/run/user/$(id -u)
-exec-once = export $(dbus-launch)
+exec-once = if [ -z "$DBUS_SESSION_BUS_ADDRESS" ]; then eval $(dbus-launch --sh-syntax) || systemctl --user start dbus; fi
 
 #############################
 ### ENVIRONMENT VARIABLES ###
