--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -70,8 +70,8 @@ exec-once = ags &
 exec-once = ~/.config/hypr/scripts/resetxdgportal.sh
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
-exec-once = XDG_RUNTIME_DIR=/run/user/$(id -u)
-exec-once = if [ -z "$DBUS_SESSION_BUS_ADDRESS" ]; then eval $(dbus-launch --sh-syntax) || systemctl --user start dbus; fi
+exec-once = export XDG_RUNTIME_DIR=/run/user/$(id -u)
+exec-once = if [ -z "$DBUS_SESSION_BUS_ADDRESS" ]; then eval $(dbus-launch --sh-syntax); export $(dbus-launch) || systemctl --user start dbus; fi
 
 #############################
 ### ENVIRONMENT VARIABLES ###
