--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -215,6 +215,10 @@ input {
   # natural_scroll = true
 }
 
+cursor {
+    no_hardware_cursors = true
+}
+
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
     workspace_swipe = true
