--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -51,14 +51,14 @@ $scriptsDir = $HOME/.config/hypr/scripts
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec-once = /usr/lib/polkit-kde-authentication-agent-1 #Polkit to manage passwords
 exec-once = waybar # topbar
 exec-once = swww-daemon & # wallpaper
 exec-once = swww img ~/Pictures/archchan2.png
 exec-once = wl-paste --type text --watch cliphist store # clipboard
 exec-once = wl-paste --type image --watch cliphist store
 exec-once = hypridle
-exec-once = systemctl --user start pulseaudio; pulseaudio --start
+exec-once = pulseaudio &
 exec-once = pypr &
 exec-once = swaync &
 exec-once = if command -v arti > /dev/null; then arti proxy & fi
@@ -70,8 +70,8 @@ exec-once = ags &
 exec-once = ~/.config/hypr/scripts/resetxdgportal.sh
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
-exec-once = export XDG_RUNTIME_DIR=/run/user/$(id -u)
-exec-once = if [ -z "$DBUS_SESSION_BUS_ADDRESS" ]; then eval $(dbus-launch --sh-syntax); export $(dbus-launch) || systemctl --user start dbus; fi
+exec-once = XDG_RUNTIME_DIR=/run/user/$(id -u)
+exec-once = export $(dbus-launch)
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -113,9 +113,45 @@ env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 env = OZONE_PLATFORM,wayland
 
+# cursor stuff
+
+env = XCURSOR_PATH,$HOME/.local/share/icons/
+env = XCURSOR_SIZE,32
+env = XCURSOR_THEME,okayuXcur
+env = HYPRCURSOR_THEME,theme_okayuHypr
+env = HYPRCURSOR_SIZE,32
+
+env = ELECTRON_OZONE_PLATFORM_HINT,auto
+env = GTK_THEME,Orchis-Purple-Dark
+
 #####################
 ### LOOK AND FEEL ###
 #####################
+
+plugin {
+    hyprbars {
+        bar_height = 30
+        bar_color = rgba(FDBDFFFF)
+        bar_blur = true
+
+        col.text = rgba(000000FF)
+        bar_padding = 14
+        bar_text_size = 14
+        bar_text_font = UbuntuMono Nerd Font
+        bar_text_align = left
+        bar_part_of_window = true
+        bar_precedence_over_border = true
+        
+        hyprbars-button = rgba(ff404000), 0
+        hyprbars-button = rgba(eeee1100), 0  
+    }
+}
+
+windowrulev2 = plugin:hyprbars:bar_color rgba(FDBDFFFF),focus:1
+windowrulev2 = plugin:hyprbars:bar_color rgba(9D6D9FDD),focus:0
+
+windowrulev2 = plugin:hyprbars:title_color rgba(000000FF),focus:1
+windowrulev2 = plugin:hyprbars:title_color rgba(111111FF),focus:0
 
 # Refer to https://wiki.hyprland.org/Configuring/Variables/
 
@@ -124,13 +160,14 @@ general {
   gaps_in = 5
   gaps_out = 5
   border_size = 2
+  allow_tearing = true
   col.active_border = rgba(e5b9c6ff) rgba(c293a3ff) 45deg
   col.inactive_border = 0xff382D2E
   no_border_on_floating = false # enable border on float window
   layout = dwindle
   # cursor_inactive_timeout = 0 
   # no_focus_fallback = false 
-  # resize_on_border = false 
+  resize_on_border = true
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
@@ -151,25 +188,71 @@ decoration {
   blurls = lockscreen
 }
 
+layerrule = animation slide, swaync-notification-window
+layerrule = ignorealpha 0, swaync-notification-window
+layerrule = blur, swaync-notification-window
+layerrule = ignorealpha 0, swaync-control-center
+layerrule = animation slide right, swaync-control-center
+layerrule = blur, swaync-control-center
+layerrule = animation popin, rofi
+layerrule = ignorealpha 0, rofi
+layerrule = dimaround, rofi
+layerrule = blur, rofi
+layerrule = animation slide down, waybar
+layerrule = blur, waybar
+layerrule = noanim, selection
+
 # https://wiki.hyprland.org/Configuring/Variables/#animations
+# animations {
+    #enabled = true
+    #bezier = linear, 0, 0, 1, 1
+    #bezier = md3_standard, 0.2, 0, 0, 1
+    #bezier = md3_decel, 0.05, 0.7, 0.1, 1
+    #bezier = md3_accel, 0.3, 0, 0.8, 0.15
+    #bezier = overshot, 0.05, 0.9, 0.1, 1.1
+    #bezier = crazyshot, 0.1, 1.5, 0.76, 0.92 
+    #bezier = hyprnostretch, 0.05, 0.9, 0.1, 1.0
+    #bezier = fluent_decel, 0.1, 1, 0, 1
+    #bezier = easeInOutCirc, 0.85, 0, 0.15, 1
+    #bezier = easeOutCirc, 0, 0.55, 0.45, 1
+    #bezier = easeOutExpo, 0.16, 1, 0.3, 1
+    #animation = windows, 1, 3, md3_decel, popin 60%
+    #animation = border, 1, 10, default
+    #animation = fade, 1, 2.5, md3_decel
+    #animation = workspaces, 1, 3.5, easeOutExpo, slide
+    #animation = specialWorkspace, 1, 3, md3_decel, slidevert
+#}
+
 animations {
-    enabled = true
+    enabled = yes, please :)
+
     bezier = linear, 0, 0, 1, 1
-    bezier = md3_standard, 0.2, 0, 0, 1
-    bezier = md3_decel, 0.05, 0.7, 0.1, 1
-    bezier = md3_accel, 0.3, 0, 0.8, 0.15
-    bezier = overshot, 0.05, 0.9, 0.1, 1.1
-    bezier = crazyshot, 0.1, 1.5, 0.76, 0.92 
-    bezier = hyprnostretch, 0.05, 0.9, 0.1, 1.0
-    bezier = fluent_decel, 0.1, 1, 0, 1
-    bezier = easeInOutCirc, 0.85, 0, 0.15, 1
-    bezier = easeOutCirc, 0, 0.55, 0.45, 1
-    bezier = easeOutExpo, 0.16, 1, 0.3, 1
-    animation = windows, 1, 3, md3_decel, popin 60%
-    animation = border, 1, 10, default
-    animation = fade, 1, 2.5, md3_decel
-    animation = workspaces, 1, 3.5, easeOutExpo, slide
-    animation = specialWorkspace, 1, 3, md3_decel, slidevert
+    bezier = easeInCustom, 0.6, 0, 0.7, 0
+    bezier = easeOutCustom, 0.3, 1, 0.4, 1
+    bezier = easeOutBackCustom, 0.1, 1.2, 0.6, 1
+
+    # i dont normally use this one, but its fun :3
+    bezier = bounce, 0.80, 1.40, 0, 0.88
+
+    animation = global, 1, 4, easeOutCustom
+    
+    animation = windows, 1, 5, easeOutBackCustom
+        animation = windowsIn, 1, 5, easeOutBackCustom, popin 40%
+        animation = windowsOut, 1, 5, easeOutCustom 
+	
+    animation = layersIn, 1, 3, easeOutCustom, fade
+    animation = layersOut, 1, 2, easeInCustom, fade
+        animation = fadeLayersIn, 1, 3.5, easeOutCustom 
+        animation = fadeLayersOut, 1, 3.5, easeOutCustom 
+    
+    animation = border, 1, 4, easeOutCustom
+    animation = fade, 1, 3, easeOutCustom 
+        animation = fadeIn, 1, 3, easeOutCustom
+        animation = fadeOut, 1, 3, easeOutCustom
+     
+    animation = workspaces, 1, 5, easeOutCustom, slidefade 50%
+        animation = specialWorkspace, 1, 5, easeOutCustom, slidevert
+        animation = specialWorkspaceOut, 1, 2.5, easeInCustom, slidevert
 }
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
@@ -185,16 +268,16 @@ master {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-  disable_hyprland_logo = true
-  disable_splash_rendering = true
-  mouse_move_enables_dpms = true
-  vfr = true
-  vrr = 0
-  animate_manual_resizes = true
-  mouse_move_focuses_monitor = true
-  enable_swallow = true
-  swallow_regex = ^(wezterm)$
+    animate_manual_resizes = true
+    disable_hyprland_logo = true
+    disable_hyprland_qtutils_check = true
+    disable_splash_rendering = true
+    focus_on_activate = false
+    vfr = 1 
+    vrr = 1
+    font_family = UbuntuMono Nerd Font 
 }
+
 
 #############
 ### INPUT ###
@@ -216,9 +299,15 @@ input {
 }
 
 cursor {
-    no_hardware_cursors = true
+  no_hardware_cursors = true
+  inactive_timeout = 2
 }
 
+render {
+    explicit_sync = true 
+    explicit_sync_kms = false 
+    direct_scanout = 0
+}
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
     workspace_swipe = true
@@ -413,74 +502,56 @@ bind = $mainMod, comma, workspace, e-1
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
 # Opacity 
-windowrulev2 = opacity 0.90 0.90,class:^(Brave-browser)$
-windowrulev2 = opacity 0.80 0.80,class:^(Steam)$
-windowrulev2 = opacity 0.80 0.80,class:^(steam)$
-windowrulev2 = opacity 0.80 0.80,class:^(steamwebhelper)$
-windowrulev2 = opacity 0.80 0.80,class:^(Spotify)$
-windowrulev2 = opacity 0.80 0.80,class:^(Code)$
-windowrulev2 = opacity 0.80 0.80,class:^(thunar)$
-windowrulev2 = opacity 0.80 0.80,class:^(file-roller)$
-windowrulev2 = opacity 0.80 0.80,class:^(nwg-look)$
-windowrulev2 = opacity 0.80 0.80,class:^(qt5ct)$
-windowrulev2 = opacity 0.80 0.80,class:^(discord)$ #Discord-Electron
-windowrulev2 = opacity 0.80 0.80,class:^(WebCord)$ #WebCord-Electron
-windowrulev2 = opacity 0.80 0.70,class:^(pavucontrol)$
-windowrulev2 = opacity 0.80 0.70,class:^(org.kde.polkit-kde-authentication-agent-1)$
-windowrulev2 = opacity 0.80 0.80,class:^(org.telegram.desktop)$
+# smart gaps
+#workspace = w[tv1], gapsout:0, gapsin:0
+#workspace = f[1], gapsout:0, gapsin:0
+#windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
+#windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
+#windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
+#windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
 
-# Position
-windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
-windowrulev2 = float,class:^(pavucontrol)$
-windowrulev2 = float,title:^(Media viewer)$
-windowrulev2 = float,title:^(Volume Control)$
-windowrulev2 = float,title:^(Picture-in-Picture)$
-windowrulev2 = float,class:^(Viewnior)$
-windowrulev2 = float,title:^(DevTools)$
-windowrulev2 = float,class:^(file_progress)$
-windowrulev2 = float,class:^(confirm)$
-windowrulev2 = float,class:^(dialog)$
-windowrulev2 = float,class:^(download)$
-windowrulev2 = float,class:^(notification)$
-windowrulev2 = float,class:^(error)$
-windowrulev2 = float,class:^(confirmreset)$
+#windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+windowrulev2 = workspace 1,class:^(firefox.*|zen)$
+windowrulev2 = workspace 2,class:^(vesktop)$
+windowrulev2 = workspace 2,class:^(.*)([Cc]ord)$
+windowrulev2 = workspace 3,class:^(steam)$,title:^(Steam)$
+windowrulev2 = workspace 4,class:^(foot)$
+windowrulev2 = workspace 9,class:^(Spotify|spotify)$
+windowrulev2 = workspace 10,class:^(com.obsproject.Studio)$
+windowrulev2 = workspace 10,class:^(obs)$
+
+# steam floats
+windowrulev2 = size 500 700,class:^(steam)$,title:^(Friends List)$
+windowrulev2 = center 1,class:^(steam)$,title:^(Friends List)$
+
+windowrulev2 = float,class:^(steam)$,title:^(.*)$
+windowrulev2 = center 1, class:^()$,title:^(Steam)$
+windowrulev2 = tile,class:^(steam)$,title:^(Steam)$
+
+# other
+
+windowrulev2 = float,class:^(pcmanfm)$
+windowrulev2 = float,class:^(eog)$
+windowrulev2 = float,class:^(Bitwarden)$
+windowrulev2 = float,class:^(blueman-manager)$
+windowrulev2 = float,class:^(love)$
+windowrulev2 = float,class:^(firefox.*|zen)$,title:^(Picture-in-Picture)$
+windowrulev2 = float,class:^(firefox.*|zen)$,title:^(Library)$
+windowrulev2 = float,class:^(firefox.*|zen)$,title:^(Invalid Save Permissions)$
+windowrulev2 = float,class:^(foot)$,title:^(btop)$
+windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = float,class:^(org.twosheds.iwgtk|iwgtk)$,title:^(.*)$
+
+windowrulev2 = float,title:^(Open)$
 windowrulev2 = float,title:^(Open File)$
-windowrulev2 = float,title:^(branchdialog)$
-windowrulev2 = float,title:^(Confirm to replace files)
-windowrulev2 = float,title:^(File Operation Progress)
+windowrulev2 = float,title:^(Open Files)$
+windowrulev2 = float,title:^(Choose Files)$
+windowrulev2 = float,title:^(Save As)$
+windowrulev2 = float,title:^(Confirm to replace files)$
+windowrulev2 = float,title:^(File Operation Progress)$
+windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
 
-windowrulev2 = move 75 44%,title:^(Volume Control)$
-
-# Workspace 
-windowrulev2 = workspace 1, class:^(Brave-browser)$
-windowrulev2 = workspace 2, class:^(discord)$
-windowrulev2 = workspace 3, class:^(org.telegram.desktop)$
-windowrulev2 = workspace 4, class:^(Code)$
-windowrulev2 = workspace 4, class:^(code-url-handler)$
-windowrulev2 = workspace 5, class:^(Spotify)$
-
-# Size
-windowrulev2 = size 800 600,class:^(download)$
-windowrulev2 = size 800 600,title:^(Open File)$
-windowrulev2 = size 800 600,title:^(Save File)$
-windowrulev2 = size 800 600,title:^(Volume Control)$
-
-windowrulev2 = idleinhibit focus,class:^(mpv)$
-windowrulev2 = idleinhibit fullscreen,class:^(Brave-browser)$
-
-# xwaylandvideobridge
-windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
-windowrulev2 = noanim,class:^(xwaylandvideobridge)$
-windowrulev2 = nofocus,class:^(xwaylandvideobridge)$
-windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
-
-# layerrule = blur,waybar
-layerrule = blur,rofi
-layerrule = ignorezero,rofi
-layerrule = blur,notifications
-layerrule = ignorezero,notifications
-layerrule = blur,swaync-notification-window
-layerrule = ignorezero,swaync-notification-window
-layerrule = blur,swaync-control-center
-layerrule = ignorezero,swaync-control-center
-layerrule = blur,logout_dialog
+# tearing
+windowrulev2 = immediate 1,fullscreen,class:^(.*)$
+windowrulev2 = immediate 1,class:^(gamescope)$
