--- a/configs/hypr/hyprlock.conf
+++ b/configs/hypr/hyprlock.conf
@@ -1,75 +1,89 @@
-background {
-    monitor =
-    path = ~/.config/assets/backgrounds/cat_leaves_blurred.png # only png supported for now
+$font = UbuntuMono Nerd Font
+$text = rgba(ffffffff)
+
+general {
+    hide_cursor = true
+    ignore_empty_input = true
+    screencopy_mode = 0 
 }
 
+# misc text
+label {
+    monitor =
+    text = be right back >v<
+    color = $text
+    font_size = 50
+    font_family = $font
+    position = -50, 30
+    halign = right
+    valign = bottom
+
+    shadow_passes = 2
+    shadow_size = 4
+}
+
+# time
+label {
+    monitor =
+    text = $TIME
+    color = $text
+    font_size = 90
+    font_family = $font
+    position = -50, 100
+    halign = right
+    valign = bottom
+
+    shadow_passes = 2
+    shadow_size = 8
+}
+
+# avatar
+image {
+    path = /usr/share/sddm/faces/nishi.face.icon
+    halign = left
+    valign = bottom
+    position = 120, 150
+    shadow_passes = 2
+    shadow_size = 4
+}
+
+# welcome text
+label {
+    text = $USER ^v^
+    font_family = $font
+    font_size = 24
+    halign = left
+    valign = bottom
+    position = 125, 105
+    shadow_passes = 2
+    shadow_size = 4
+}
+
+# password
 input-field {
     monitor =
-    size = 200, 50
-    outline_thickness = 3
-    dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
-    dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
-    dots_center = true
-    dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
-    outer_color = rgb(a6adc8)
-    inner_color = rgb(11111b)
-    font_color = rgb(a6adc8)
-    fade_on_empty = true
-    fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
-    placeholder_text = <i>Input Password...</i> # Text rendered in the input box when it's empty.
-    hide_input = false
-    rounding = -1 # -1 means complete rounding (circle/oval)
-    check_color = rgb(204, 136, 34)
-    fail_color = rgb(204, 34, 34) # if authentication failed, changes outer_color and fail message color
-    fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i> # can be set to empty
-    fail_transition = 100 # transition time in ms between normal outer_color and fail_color
-    capslock_color = -1
-    numlock_color = -1
-    bothlock_color = -1 # when both locks are active. -1 means don't change outer color (same for above)
-    invert_numlock = false # change color if numlock is off
-    swap_font_color = false # see below
-    position = 0, -20
-    halign = center
-    valign = center
-}
-
-label {
-    monitor =
-    text = cmd[update:1000] echo "$TIME"
-    color = rgba(a6adc8)
-    font_size = 55
-    font_family = Fira Semibold
-    position = -100, 40
-    halign = right
+    size = 300,50
+    fade_on_empty = 0
+    position = 50, 40
+    font_family = $font Bold
+    placeholder_text = <i> Input Password </i>
+    halign = left
     valign = bottom
-    shadow_passes = 5
-    shadow_size = 10
+
+    outer_color = rgba(ffffffff)	
+    inner_color = rgba(44444450)
+    capslock_color = rgba(ffff00ff)
+    numlock_color = rgba(00ffffff)
+    bothlock_color = rgba(ff00ffff)
+    font_color = rgba(ffffffff)
+    shadow_passes = 2
+    shadow_size = 4
 }
 
-label {
-    monitor =
-    text = Hello
-    color = rgba(a6adc8)
-    font_size = 20
-    font_family = Fira Semibold
-    position = -100, 160
-    halign = right
-    valign = bottom
-    shadow_passes = 5
-    shadow_size = 10
-}
-
-image {
-    monitor =
-    path = ~/.config/assets/backgrounds/cat_pacman.png
-    size = 280 # lesser side if not 1:1 ratio
-    rounding = -1 # negative values mean circle
-    border_size = 4
-    border_color = rgb(a6adc8)
-    rotate = 0 # degrees, counter-clockwise
-    reload_time = -1 # seconds between reloading, 0 to reload with SIGUSR2
-#    reload_cmd =  # command to get new path. if empty, old path will be used. don't run "follow" commands like tail -F
-    position = 0, 200
-    halign = center
-    valign = center
+background {
+#   path = $HOME/Pictures/Wallpapers/lockscreen.png
+    path = screenshot 
+    blur_passes = 3
+    blur_size = 3
+    brightness = 0.8
 }
