--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -150,11 +150,11 @@ windowrulev2 = plugin:hyprbars:title_color rgba(111111FF),focus:0
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
   gaps_in = 5
-  gaps_out = 5
-  border_size = 2
+  gaps_out = 15
+  border_size = 4
   allow_tearing = true
-  col.active_border = rgba(e5b9c6ff) rgba(c293a3ff) 45deg
-  col.inactive_border = 0xff382D2E
+  col.active_border = rgba(FDBDFFFF) rgba(9DADFFFF) 90deg
+    col.inactive_border = rgba(9D6D9FDD) rgba(3D5D96DD) 90deg
   no_border_on_floating = false # enable border on float window
   layout = dwindle
   # cursor_inactive_timeout = 0 
@@ -162,18 +162,33 @@ general {
   resize_on_border = true
 }
 
+
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
   rounding = 10
   shadow:enabled = false
   active_opacity = 0.90
   inactive_opacity = 0.88
+
+  dim_inactive = true
+  dim_strength = 0.25
+
+  shadow {
+    enabled = true
+    range = 5 
+    render_power = 1 
+    color = rgba(1A1A1AAA)
+    offset = 5, 5
+    scale = 1
+  }
+
   blur {
     enabled = true
-    size = 6
+    size = 8
     passes = 3
     new_optimizations = true
     xray = true
+    popups = true
     ignore_opacity = false
   }
   blurls = waybar
