--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -52,18 +52,19 @@ $scriptsDir = $HOME/.config/hypr/scripts
 # Or execute your favorite apps at launch like this:
 
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 #Polkit to manage passwords
-exec-once = waybar # topbar
+exec-once = waybar &
 exec-once = swww-daemon & # wallpaper
 exec-once = swww img ~/Pictures/archchan2.png
 exec-once = wl-paste --type text --watch cliphist store # clipboard
 exec-once = wl-paste --type image --watch cliphist store
 exec-once = hypridle
-exec-once = pulseaudio &
+exec-once = pipewire &
+exec-once = pipewire-pulse &
+exec-once = wireplumber &
 exec-once = pypr &
 exec-once = swaync &
-exec-once = if command -v arti > /dev/null; then arti proxy & fi
 exec-once = systemctl --user restart pipewire
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = dbus-update-activation-environment --all &
 exec-once = nm-applet &
 exec-once = hyprpaper &
 exec-once = ags &
@@ -510,14 +511,13 @@ bind = $mainMod, comma, workspace, e-1
 
 # Opacity 
 # smart gaps
-#workspace = w[tv1], gapsout:0, gapsin:0
-#workspace = f[1], gapsout:0, gapsin:0
-#windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
-#windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
-#windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
-#windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
-
-#windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+workspace = w[tv1], gapsout:0, gapsin:0
+workspace = f[1], gapsout:0, gapsin:0
+windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
+windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
+windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
+windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
+windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
 windowrulev2 = workspace 1,class:^(firefox.*|zen)$
 windowrulev2 = workspace 2,class:^(vesktop)$
