--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -265,13 +265,15 @@ animations {
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # You probably want this
+    pseudotile = true
+    preserve_split = true
+    split_bias = 2
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
-    new_status = true
+    new_status = slave
+    mfact = 0.5
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
