--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -361,9 +361,7 @@ bind = $mainMod, Z, exec, pypr zoom
 bind = $mainMod, T, exec, thunar
 bind = $mainMod SHIFT, T, exec, ghostty -e ranger
 bind = $mainMod, D, exec, rofi -show drun
-bind = $mainMod, B, exec, librewolf
-bind = $mainMod SHIFT, B, exec, firefox
-bind = $mainMod SHIFT, B, exec, librewolf
+bind = $mainMod, B, exec, brave
 bind = $mainMod, B, exec, firefox --enable-features=UseOzonePlatform --ozone-platform=wayland
 bind = $mainMod, S, exec, steam --enable-features=UseOzonePlatform --ozone-platform=wayland
 
