--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -63,6 +63,7 @@ exec-once = pipewire-pulse &
 exec-once = wireplumber &
 exec-once = pypr &
 exec-once = swaync &
+exec-once = fcitx5 &
 exec-once = systemctl --user restart pipewire
 exec-once = dbus-update-activation-environment --all &
 exec-once = nm-applet &
