--- a/vencord/vencord-settings-backup-2025-03-16.json
+++ b/vencord/vencord-settings-backup-2025-03-16.json
@@ -351,7 +351,7 @@
                 "enabled": false
             },
             "NoServerEmojis": {
-                "enabled": true
+                "enabled": false
             },
             "NoTypingAnimation": {
                 "enabled": true
