--- a/configs/waybar/config.jsonc
+++ b/configs/waybar/config.jsonc
@@ -1,4 +1,3 @@
-// -*- mode: jsonc -*-
 {
     // "layer": "top", // Waybar at top layer
     "height": 30, // Waybar height (to be removed for auto height)
@@ -9,37 +8,38 @@
     "margin-bottom": 0,
     // Choose the order of the modules
     "modules-left": [
-		"wlr/taskbar",
-		"network"
-	],
+        "wlr/taskbar",
+        "network"
+    ],
     "modules-center": [
         "hyprland/workspaces"
     ],
     "modules-right": [
-		"tray",
+        "tray",
         "privacy",
-		"pipewire",
+        "wireplumber",
         "battery",
-        "clock"
+        "clock",
+        "pipewire"
     ],
 
-	"group/hardware": {
-		"orientation": "horizontal",
-		"modules": [
-			"cpu",
-			"temperature"
-		]
-	},
-	
-	"wlr/taskbar": {
-    	"format": "{icon}",
-    	"icon-size": 24,
-    	"icon-theme": "Colloid-Purple-Dark",
+    "group/hardware": {
+        "orientation": "horizontal",
+        "modules": [
+            "cpu",
+            "temperature"
+        ]
+    },
+
+    "wlr/taskbar": {
+        "format": "{icon}",
+        "icon-size": 24,
+        "icon-theme": "Colloid-Purple-Dark",
         "tooltip-format": "{title}",
-    	"on-click": "activate",
-    	"on-click-middle": "close",
-    	"sort-by-app-id": true
-},
+        "on-click": "activate",
+        "on-click-middle": "close",
+        "sort-by-app-id": true
+    },
 
     "keyboard-state": {
         "numlock": true,
@@ -50,7 +50,7 @@
             "unlocked": ""
         }
     },
-    
+
     "idle_inhibitor": {
         "format": "{icon}",
         "format-icons": {
@@ -62,30 +62,30 @@
     "tray": {
         "icon-size": 24,
         "spacing": 10
-	},
-    
+    },
+
     "clock": {
         "timezone": "Europe/London",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
         "format": "{:%H:%M}",
-	"format-alt": "{:%Y-%m-%d}"
+        "format-alt": "{:%Y-%m-%d}"
     },
-    
+
     "cpu": {
         "format": "{usage:02}%   ",
         "tooltip": false,
-	"interval": 2
+        "interval": 2
     },
-    
+
     "temperature": {
         "hwmon-path": "/sys/class/hwmon/hwmon1/temp1_input",
         "critical-threshold": 75,
-	"interval": 2,
+        "interval": 2,
         "format": "{temperatureC}°C {icon}",
         "format-icons": ["", "", ""],
-    	"tooltip": false
-	},
-    
+        "tooltip": false
+    },
+
     "battery": {
         "states": {
             // "good": 95,
@@ -97,11 +97,12 @@
         "format-plugged": "{capacity}% ",
         "format-alt": "{time} {icon}  {power:2.1f}W",
         "design-capacity": true,
-		// "format-good": "", // An empty format will hide the module
+        // "format-good": "", // An empty format will hide the module
         // "format-full": "",
         "format-icons": ["", "", "", "", ""],
         "interval": 2
     },
+
     "network": {
         // "interface": "wlp2*", // (Optional) To force the use of this interface
         "format-wifi": "{essid}  ",
@@ -110,10 +111,11 @@
         "format-linked": "{ifname} (No IP)  ",
         "format-disconnected": "Disconnected ⚠",
         "on-click": "iwgtk",
-		//"format-alt": "{ifname}: {ipaddr}/{cidr}",
-		"interval": 2
+        //"format-alt": "{ifname}: {ipaddr}/{cidr}",
+        "interval": 2
     },
-    "pulseaudio": {
+
+    "piepwire": {
         "scroll-step": 5, // %, can be a float
         "format": "{volume}% {icon}",
         "format-bluetooth": "{volume}% {icon} ",
