--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -86,13 +86,13 @@ env = HYPRCURSOR_SIZE,24
 
 # Firefox
 env = MOZ_ENABLE_WAYLAND,1
-env = MOZ_DISABLE_RDD_SANDBOX,1
+#env = MOZ_DISABLE_RDD_SANDBOX,1
 
 # Nvidia
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia # remove if firefox crashes
+#env = __GLX_VENDOR_LIBRARY_NAME,nvidia # remove if firefox crashes
 env = NVD_BACKEND,direct
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
@@ -115,7 +115,7 @@ env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 env = OZONE_PLATFORM,wayland
 
-env = ELECTRON_OZONE_PLATFORM_HINT,auto
+#env = ELECTRON_OZONE_PLATFORM_HINT,auto
 env = GTK_THEME,Orchis-Purple-Dark
 
 #####################
@@ -360,11 +360,12 @@ bind = $mainMod, Z, exec, pypr zoom
 
 # Applications
 bind = $mainMod, T, exec, thunar
-bind = $mainMod SHIFT, T, exec, ghostty -e ranger
+bind = $mainMod SHIFT, T, exec, ghostty -e rangers
 bind = $mainMod, D, exec, rofi -show drun
-bind = $mainMod, B, exec, brave
-bind = $mainMod, B, exec, firefox --enable-features=UseOzonePlatform --ozone-platform=wayland
-bind = $mainMod, S, exec, steam --enable-features=UseOzonePlatform --ozone-platform=wayland
+bind = $mainMod SHIFT , B, exec, zen-browser
+bind = $mainMod, B, exec, zen-browser  --enable-features=UseOzonePlatform --ozone-platform=wayland 
+bind = $mainMod, S, exec, steam
+bind = $mainMod SHIFT, S, exec, steam
 
 # Dwindle Layout
 bind = $mainMod, A, togglesplit # only works on dwindle layout
@@ -379,36 +380,27 @@ bind = ALT, tab, cyclenext
 bind = ALT, tab, bringactivetotop  
 
 # Special Keys / Hot Keys
-bindel = , xf86audioraisevolume, exec, $scriptsDir/Volume.sh --inc # volume up
-bindel = , xf86audiolowervolume, exec, $scriptsDir/Volume.sh --dec # volume down
-bindl = , xf86AudioMicMute, exec, $scriptsDir/Volume.sh --toggle-mic # mic mute
-bindl = , xf86audiomute, exec, $scriptsDir/Volume.sh --toggle # mute
-bindel = , xf86audioraisevolume, exec, $HOME/.config/hypr/scripts/Volume.sh --inc # volume up
-bindel = , xf86audiolowervolume, exec, $HOME/.config/hypr/scripts/Volume.sh --dec # volume down
-bindl = , xf86AudioMicMute, exec, $HOME/.config/hypr/scripts/Volume.sh --toggle-mic # mic mute
-bindl = , xf86audiomute, exec, $HOME/.config/hypr/scripts/Volume.sh --toggle # mute
-bindl = , xf86Sleep, exec, systemctl suspend  # sleep button 
-bindl = , xf86Rfkill, exec, $scriptsDir/AirplaneMode.sh # Airplane mode
-bindl = , xf86Rfkill, exec, $HOME/.config/hypr/scripts/AirplaneMode.sh # Airplane mode
 
-# media controls using keyboards
-bindl = , xf86AudioPlayPause, exec, $scriptsDir/MediaCtrl.sh --pause
-bindl = , xf86AudioPause, exec, $scriptsDir/MediaCtrl.sh --pause
-bindl = , xf86AudioPlay, exec, $scriptsDir/MediaCtrl.sh --pause
-bindl = , xf86AudioNext, exec, $scriptsDir/MediaCtrl.sh --nxt 
-bindl = , xf86AudioPrev, exec, $scriptsDir/MediaCtrl.sh --prv
-bindl = , xf86audiostop, exec, $scriptsDir/MediaCtrl.sh --stop
-bindl = , xf86AudioPlayPause, exec, $HOME/.config/hypr/scripts/MediaCtrl.sh --play
-bindl = , xf86AudioPause, exec, $HOME/.config/hypr/scripts/MediaCtrl.sh --pause
-bindl = , xf86AudioPlay, exec, $HOME/.config/hypr/scripts/MediaCtrl.sh --pause
-bindl = , xf86AudioNext, exec, $HOME/.config/hypr/scripts/MediaCtrl.sh --nxt 
-bindl = , xf86AudioPrev, exec, $HOME/.config/hypr/scripts/MediaCtrl.sh --prv
-bindl = , xf86audiostop, exec, $HOME/.config/hypr/scripts/MediaCtrl.sh --stop
+# Volume Controls
+bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bindel = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindl = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindl = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+
+# Media Controls
+bindl = , XF86AudioPlayPause, exec, playerctl play-pause
+bindl = , XF86AudioNext, exec, playerctl next
+bindl = , XF86AudioPrev, exec, playerctl previous
+bindl = , XF86AudioStop, exec, playerctl stop
+
+# System Controls
+bindl = , XF86Sleep, exec, systemctl suspend 
+bindl = , XF86RFKill, exec, rfkill toggle all
 
 # screenshot with swappy (another screenshot tool)
-bind = $mainMod, X, exec, grimblast --notify copy area
-bind = $mainMod CTRL, X, exec, grimblast --notify save area
-bind = $mainMod ALT, X, exec, grimblast --notify save active
+bind = $mainMod, X, exec, grimblast copy area && pkill waybar; waybar &
+bind = $mainMod CTRL, X, exec, grimblast save area && pkill waybar; waybar &
+bind = $mainMod ALT, X, exec, grimblast save active && pkill waybar; waybar &
 
 # Resize windows
 binde = $mainMod CTRL, J, resizeactive,-50 0
