--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -62,7 +62,6 @@ exec-once = pipewire &
 exec-once = pipewire-pulse &
 exec-once = wireplumber &
 exec-once = pypr &
-exec-once = swaync &
 exec-once = dunst &
 exec-once = fcitx5 &
 exec-once = systemctl --user restart pipewire
@@ -383,16 +382,16 @@ bind = ALT, tab, bringactivetotop
 # Special Keys / Hot Keys
 
 # Volume Controls
-bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bindel = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindl = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindl = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ && dunstify -t 2000 "Volume Up" "Increased by 5%"
+bindel = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- && dunstify -t 2000 "Volume Down" "Decreased by 5%"
+bindl = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle && dunstify -t 2000 "Audio" "Speaker mute toggled"
+bindl = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle && dunstify -t 2000 "Microphone" "Mic mute toggled"
 
 # Media Controls
-bindl = , XF86AudioPlayPause, exec, playerctl play-pause
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPrev, exec, playerctl previous
-bindl = , XF86AudioStop, exec, playerctl stop
+bindl = , XF86AudioPlayPause, exec, playerctl play-pause && dunstify "Media" "Play/Pause toggled"
+bindl = , XF86AudioNext, exec, playerctl next && dunstify "Media" "Skipped to next track"
+bindl = , XF86AudioPrev, exec, playerctl previous && dunstify "Media" "Went back to previous track"
+bindl = , XF86AudioStop, exec, playerctl stop && dunstify "Media" "Playback stopped"
 
 # System Controls
 bindl = , XF86Sleep, exec, systemctl suspend 
