--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -382,16 +382,16 @@ bind = ALT, tab, bringactivetotop
 # Special Keys / Hot Keys
 
 # Volume Controls
-bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ && dunstify -t 2000 "Volume Up" "Increased by 5%"
-bindel = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- && dunstify -t 2000 "Volume Down" "Decreased by 5%"
-bindl = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle && dunstify -t 2000 "Audio" "Speaker mute toggled"
-bindl = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle && dunstify -t 2000 "Microphone" "Mic mute toggled"
+bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ && vol=$(wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{printf "%d", $2 * 100}') && dunstify -h int:value:$vol -r 900 -t 180 "Volume Up" "$vol%"
+bindel = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- && vol=$(wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{printf "%d", $2 * 100}') && dunstify -h int:value:$vol -r 900 -t 180 "Volume Down" "$vol%"
+bindl = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle && dunstify -t 500 "Audio" "Speaker mute toggled"
+bindl = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle && dunstify -t 500 "Microphone" "Mic mute toggled"
 
 # Media Controls
-bindl = , XF86AudioPlayPause, exec, playerctl play-pause && dunstify "Media" "Play/Pause toggled"
-bindl = , XF86AudioNext, exec, playerctl next && dunstify "Media" "Skipped to next track"
-bindl = , XF86AudioPrev, exec, playerctl previous && dunstify "Media" "Went back to previous track"
-bindl = , XF86AudioStop, exec, playerctl stop && dunstify "Media" "Playback stopped"
+bindl = , XF86AudioPlayPause, exec, playerctl play-pause && dunstify -t 500 "Media" "Play/Pause toggled"
+bindl = , XF86AudioNext, exec, playerctl next && dunstify -t 500 "Media" "Skipped to next track"
+bindl = , XF86AudioPrev, exec, playerctl previous && dunstify -t 500 "Media" "Went back to previous track"
+bindl = , XF86AudioStop, exec, playerctl stop && dunstify -t 500 "Media" "Playback stopped"
 
 # System Controls
 bindl = , XF86Sleep, exec, systemctl suspend 
