--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -348,7 +348,7 @@ $UserScripts = $HOME/.config/hypr/UserScripts
 bind = $mainMod, W, fullscreen, 1
 bind = $mainMod, F, fullscreen, 0
 bind = $mainMod, MINUS, exec, waypaper --folder /home/lazybev/Pictures/
-bind = $mainMod, Return, exec, ghostty
+bind = $mainMod, Return, exec, ghostty -e bash
 bind = $mainMod, Q, killactive # Kill
 bind = $mainMod SHIFT, Q, exec, $scriptsDir/KillActiveProcess.sh # Kill active process
 bind = $mainMod SHIFT, X, exec, $scriptsDir/LockScreen.sh # screen lock
