--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -359,8 +359,7 @@ bind = $mainMod SHIFT, P, exec, $HOME/.config/hypr/scripts/Wlogout.sh
 bind = $mainMod, Z, exec, pypr zoom   
 
 # Applications
-bind = $mainMod, T, exec, thunar
-bind = $mainMod SHIFT, T, exec, ghostty -e rangers
+bind = $mainMod, T, exec, dolphin
 bind = $mainMod, D, exec, rofi -show drun
 bind = $mainMod SHIFT , B, exec, zen-browser
 bind = $mainMod, B, exec, zen-browser  --enable-features=UseOzonePlatform --ozone-platform=wayland 
