--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -54,7 +54,7 @@ $scriptsDir = $HOME/.config/hypr/scripts
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 #Polkit to manage passwords
 exec-once = waybar &
 exec-once = swww-daemon & # wallpaper
-exec-once = swww img ~/Pictures/archchan2.png
+exec-once = swww img ~/Pictures/todo.png
 exec-once = wl-paste --type text --watch cliphist store # clipboard
 exec-once = wl-paste --type image --watch cliphist store
 exec-once = hypridle
