--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -293,9 +293,9 @@ bind = $mainMod, F, fullscreen, 0
 bind = $mainMod, MINUS, exec, waypaper --folder /home/lazybev/Pictures/
 bind = $mainMod, Return, exec, ghostty -e bash
 bind = $mainMod, Q, killactive # Kill
-bind = $mainMod SHIFT, Q, exec, $scriptsDir/KillActiveProcess.sh # Kill active process
-bind = $mainMod SHIFT, X, exec, $scriptsDir/LockScreen.sh # screen lock
-bind = $mainMod SHIFT, P, exec, $scriptsDir/Wlogout.sh # power menu
+# bind = $mainMod SHIFT, Q, exec, $scriptsDir/KillActiveProcess.sh # Kill active process
+# bind = $mainMod SHIFT, X, exec, $scriptsDir/LockScreen.sh # screen lock
+# bind = $mainMod SHIFT, P, exec, $scriptsDir/Wlogout.sh # power menu
 bind = $mainMod SHIFT, Q, exec, kill $(hyprctl activewindow | grep -o 'pid: [0-9]*' | cut -d' ' -f2)
 bind = $mainMod SHIFT, X, exec, pidof hyprlock || hyprlock -q # screen lock
 bind = $mainMod SHIFT, P, exec, $HOME/.config/hypr/scripts/Wlogout.sh
